<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/algonublado"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/estado_del_tiempo"
        android:paddingTop="15dp"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/visibilidad"
        android:layout_below="@id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/visibilidad"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/temperatura"
        android:layout_below="@id/visibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/temperatura"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/humedad"
        android:layout_below="@id/temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/humedad"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/viento"
        android:layout_below="@id/humedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/viento"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/sensacion"
        android:layout_below="@id/viento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sensacion_termica"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/presion"
        android:layout_below="@id/sensacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/presion_nivel_localidad"
        android:paddingLeft="25dp"
        />

</RelativeLayout>
